package logic;

import logic.cards.Card;

public class Deck {
    private Card deck[];
}
