package main.java;

import lombok.Builder;
import lombok.Data;


public class monsterCard extends Cards{

}
